--- a/src/TodoItem.css
+++ b/src/TodoItem.css
@@ -1,12 +1,17 @@
 .TodoItem {
-  background-color: #FAFAFA;
+  background-color: #fafafa;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 24px;
   box-shadow: 0px 5px 50px rgba(32, 35, 41, 0.15);
+  /* cursor: pointer; */
 }
+
+/* .TodoItem:hover {
+  background-color: rgba(0, 0, 0, 0.01);
+} */
 
 .TodoItem-p {
   margin: 24px 0 24px 24px;
